Updates on mobile ui
